--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
       font-display: swap;
     }
 
-  <h1> Project Echo will return again soon.  <h1> 
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: black;
+      color: white;
+      font-family: 'Determination', monospace;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3rem;
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Project Echo will return again soon.</h1> 
 </body>
 </html>
