--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Looking for secrets? You ain't Flowey! Get the hell out of here or i'll send you back to Tartarus... -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -396,7 +398,7 @@
       <a href="https://discord.gg/bVSvffJEQD" target="_blank">Discord</a>
     </p>
     <br>
-    <p>©Not affiliated with Toby Fox or Future Cat LLC.</p>
+    <p>Not affiliated with Toby Fox or Future Cat LLC. Ports by Ventura J.S.C. I DO NOT HAVE ANY ALTERNATE ACCOUNTS OR SOCIAL MEDIA ASIDE FROM YOUTUBE</p>
   </footer>
 </body>
 </html>
