--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </div>
     
     <div id="playtest" class="playtest-box">
-      <a href="https://discord.gg/bVSvffJEQD" target="_blank" class="playtest-cta">Join Discord (first 10 people to join gets free playtester!)</a>
+      <a href="https://discord.gg/bVSvffJEQD" target="_blank" class="playtest-cta">Join Discord! (People who join before February 20th gets FREE playtester!)</a>
     </div>
   </section>
 
@@ -402,3 +402,4 @@
   </footer>
 </body>
 </html>
+<!-- ok fine my biggest darkest secret is that i spent over 1k dollars on Wii Us. Happy now? -->
