Remove inline styles and link to external stylesheet

--- a/index.html
+++ b/index.html
@@ -7,287 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project Echo - a port of UNDERTALE and DELTARUNE to Wii U</title>
   <link rel="icon" type="image/png" href="https://undertale.wiki/images/Echo_Flower_overworld.png?cb=trphc8&h=thumb.php&f=Echo_Flower_overworld.png">
-  <style>
-    @font-face {
-      font-family: 'Determination';
-      src: url('https://raw.githubusercontent.com/projectechou/projectecho.github.io/main/determination.ttf') format('truetype');
-      font-display: swap;
-    }
-
-    *, *::before, *::after {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    :root {
-      --bg: #000000;
-      --text: #ffffff;
-      --accent-red: #ff0000;
-      --accent-yellow: #ffff00;
-      --accent-gray: #555555;
-      --nav-bg: #2a2a2a;
-    }
-
-    body {
-      background-color: var(--bg);
-      color: var(--text);
-      font-family: 'Determination', monospace;
-      min-height: 100vh;
-      overflow-x: hidden;
-    }
-
-    nav {
-      background-color: var(--nav-bg);
-      padding: 14px 0;
-      display: flex;
-      justify-content: center;
-      gap: clamp(10px, 3vw, 48px);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-
-    nav a {
-      color: var(--text);
-      text-decoration: none;
-      font-size: 15px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      transition: color 0.2s;
-    }
-
-    nav a:hover {
-      color: var(--accent-yellow);
-    }
-
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 80px 20px 40px;
-      text-align: center;
-    }
-
-    .hero-title {
-      font-size: clamp(52px, 10vw, 100px);
-      letter-spacing: 6px;
-      line-height: 1.1;
-      margin-bottom: 10px;
-    }
-
-    .playtest-box {
-      margin-top: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .playtest-subtitle {
-      font-size: 14px; 
-      color: var(--accent-gray); 
-      letter-spacing: 1px;
-    }
-
-    .playtest-cta {
-      padding: 15px 35px;
-      border: 2px solid var(--accent-yellow);
-      background: transparent;
-      color: var(--accent-yellow);
-      text-decoration: none;
-      font-size: 18px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      transition: all 0.3s ease;
-      display: inline-block;
-      line-height: 1; 
-    }
-
-    .playtest-cta:hover {
-      background: var(--accent-yellow);
-      color: var(--bg);
-      box-shadow: 0 0 15px var(--accent-yellow);
-    }
-
-    .games-section {
-      text-align: center;
-      padding: 60px 20px;
-    }
-
-    .games-section h2 {
-      font-size: clamp(22px, 4vw, 32px);
-      letter-spacing: 3px;
-      margin-bottom: 36px;
-    }
-
-    .game-cards {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 24px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .game-card {
-      border: 2px solid var(--accent-gray);
-      border-radius: 4px;
-      padding: 20px;
-      width: 280px;
-      background: #111;
-      transition: border-color 0.25s, transform 0.2s;
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .game-card:hover {
-      border-color: var(--accent-yellow);
-      transform: translateY(-4px);
-    }
-
-    .game-card img {
-      width: 100%;
-      height: 160px;
-      object-fit: cover;
-      border-radius: 2px;
-      margin-bottom: 16px;
-      border: 1px solid #333;
-    }
-
-    .game-card .card-title {
-      font-size: 20px;
-      letter-spacing: 2px;
-      margin-bottom: 8px;
-      text-transform: uppercase;
-    }
-
-    .game-card .card-status {
-      font-size: 12px;
-      letter-spacing: 2px;
-      color: var(--accent-yellow);
-      margin-bottom: 4px;
-    }
-
-    .game-card .card-engine {
-      font-size: 11px;
-      color: var(--accent-gray);
-      font-style: italic;
-      letter-spacing: 1px;
-    }
-
-    .disclaimer-section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      border: 1px solid #222;
-      background-color: #0a0a0a;
-      border-radius: 4px;
-      text-align: center;
-    }
-
-    .raid-notice {
-      max-width: 800px;
-      margin: 40px auto 60px;
-      padding: 24px;
-      border: 2px solid var(--accent-red);
-      background-color: #0a0a0a;
-      border-radius: 4px;
-      text-align: center;
-    }
-
-    .raid-notice-title {
-      color: var(--accent-red);
-      font-size: 16px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      margin-bottom: 14px;
-    }
-
-    .raid-notice-text {
-      font-size: 13px;
-      color: var(--text);
-      line-height: 2;
-      letter-spacing: 1.2px;
-    }
-
-    .raid-notice-text span {
-      color: var(--accent-yellow);
-    }
-
-    .disclaimer-title {
-      color: var(--accent-red);
-      font-size: 14px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-    }
-
-    .disclaimer-text {
-      font-size: 11px;
-      color: var(--accent-gray);
-      line-height: 1.8;
-      letter-spacing: 1px;
-    }
-
-    .about-section {
-      text-align: center;
-      padding: 70px 20px;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .about-section h2 {
-      font-size: clamp(20px, 3.5vw, 28px);
-      letter-spacing: 3px;
-      margin-bottom: 24px;
-    }
-
-    .about-section p {
-      font-size: 13px;
-      color: var(--accent-gray);
-      line-height: 2;
-      letter-spacing: 1.2px;
-    }
-
-    .about-section p span {
-      color: var(--text);
-    }
-
-    footer {
-      border-top: 1px solid #222;
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    footer p {
-      font-size: 11px;
-      color: #444;
-      letter-spacing: 2px;
-      line-height: 2;
-    }
-
-    footer a {
-      color: var(--accent-gray);
-      text-decoration: none;
-      transition: color 0.2s;
-    }
-
-    footer a:hover {
-      color: var(--accent-yellow);
-    }
-
-    @media (max-width: 600px) {
-      nav { gap: 15px; flex-wrap: wrap; justify-content: center; padding: 10px; }
-      nav a { font-size: 10px; letter-spacing: 1px; }
-      .game-card { width: 100%; max-width: 320px; }
-      .hero-title { font-size: 40px; }
-      .playtest-cta { font-size: 14px; padding: 10px 20px; }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
