--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </section>
 
-  <section style="text-align:center; padding: 20px 20px 50px; max-width:680px; margin:0 auto;">
+  <section style="text-align:center; padding: 20px 20px 50px; max-width:40vw; margin:0 auto;">
     <p style="font-size:13px; color: var(--accent-gray); line-height:2; letter-spacing:1.2px;">
       <span style="color:var(--accent-yellow);">Project Echo</span> is a fanmade port of
       <span style="color:var(--accent-yellow);">Undertale</span>, <span style="color:var(--accent-yellow);">Deltarune</span>, and <span style="color:var(--accent-yellow);">OneShot</span>
