Rearranged assets to a different folder, made some changes to the index.html to reflect this.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project Echo - a port of UNDERTALE and DELTARUNE to Wii U</title>
-  <link rel="icon" type="image/png" href="https://undertale.wiki/images/Echo_Flower_overworld.png?cb=trphc8&h=thumb.php&f=Echo_Flower_overworld.png">
+  <link rel="icon" type="image/png" href="assets/echo.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
 
   <section class="hero">
     <div style="display:flex; align-items:center; justify-content:center; gap:24px; flex-wrap:wrap;">
-      <img src="https://github.com/projectechou/projectecho.github.io/blob/main/echo.png?raw=true" alt="Project Echo Icon" style="width:clamp(60px, 10vw, 100px); height:auto; image-rendering:pixelated;">
+      <img src="assets/echo.png" alt="Project Echo Icon" style="width:clamp(60px, 10vw, 100px); height:auto; image-rendering:pixelated;">
       <h1 class="hero-title">Project Echo</h1>
     </div>
     
@@ -53,21 +53,21 @@
     <div class="game-cards">
       
       <div class="game-card">
-        <img src="https://github.com/projectechou/projectecho.github.io/blob/main/undertale.png?raw=true" alt="Undertale">
+        <img src="assets/undertale.png" alt="Undertale">
         <div class="card-status">In Development</div>
         <div class="card-title">Undertale</div>
         <div class="card-engine">Ported using Nintendo Web Framework</div>
       </div>
 
       <div class="game-card">
-        <img src="https://github.com/projectechou/projectecho.github.io/blob/main/deltarune.jpg?raw=true" alt="Deltarune">
+        <img src="assets/deltarune.jpg" alt="Deltarune">
         <div class="card-status">In Development</div>
         <div class="card-title">Deltarune</div>
         <div class="card-engine">Ported using Nintendo Web Framework</div>
       </div>
 
       <div class="game-card">
-        <img src="https://github.com/projectechou/projectecho.github.io/blob/main/oneshot.webp?raw=true" alt="Oneshot">
+        <img src="assets/oneshot.webp" alt="Oneshot">
         <div class="card-status">Planned</div>
         <div class="card-title">Oneshot</div>
         <div class="card-engine">Will be ported using EasyRPG</div>
@@ -79,14 +79,14 @@
   <section class="disclaimer-section">
     <div class="disclaimer-title">Legal Disclaimer</div>
     <div class="disclaimer-text">
-      The people making this port does not support piracy in any way. In order to patch Project Echo onto your Wii U, you'll need a real copy of Undertale and the data.win file. OneShot does not apply to this because that port is using the 2014 freeware verison.
+      The people making this port do not support piracy in any way. In order to patch Project Echo onto your Wii U, you'll need a real copy of Undertale and the data.win file. OneShot does not apply to this because that port is using the 2014 freeware version.
     </div>
   </section>
 
   <section id="how-its-made" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
     <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">How it's Made</h2>
     <p style="font-size:13px; color:var(--accent-gray); line-height:2; letter-spacing:1.2px;">
-      I use a tool called Nintendo Web Framework to bring Undertale and Deltarune to the Wii U. Because gamemaker lacks a native Wii U port, we instead export undertale to HTML, and then use Nintendo Web Framework to pack it into a Wii U File. OneShot will be based off of the EasyRPG Wii port by cmaster25. You can find their source code here: https://github.com/cmaster25/Oneshot-For-Wii
+      I use a tool called Nintendo Web Framework to bring Undertale and Deltarune to the Wii U. Because gamemaker lacks a native Wii U port, we instead export undertale to HTML, and then use Nintendo Web Framework to pack it into a Wii U File. OneShot will be based off of the EasyRPG Wii port by cmaster25. You can find their source code here: <a href="https://github.com/cmaster25/Oneshot-For-Wii" target="_blank">https://github.com/cmaster25/Oneshot-For-Wii</a>
     </p>
   </section>
 
