Added more stuff
Seperated the patcher's CSS from the HTML file, added the patcher section and button to the main page...

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project Echo - a port of UNDERTALE and DELTARUNE to Wii U</title>
   <link rel="icon" type="image/png" href="assets/echo.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <nav>
     <a href="#about">About</a>
     <a href="#games">Games</a>
+    <a href="#patcher">Patcher</a>
     <a href="#playtest">Discord</a>
     <a href="#how-its-made">How it's Made</a>
     <a href="#faq">FAQ</a>
@@ -35,7 +36,7 @@
     <p style="font-size:13px; color: var(--accent-gray); line-height:2; letter-spacing:1.2px;">
       <span style="color:var(--accent-yellow);">Project Echo</span> is a fanmade port of
       <span style="color:var(--accent-yellow);">Undertale</span>, <span style="color:var(--accent-yellow);">Deltarune</span>, and <span style="color:var(--accent-yellow);">OneShot</span>
-      to the <span style="color:var(--accent-yellow);">Wii U</span>!
+      to the <span style="color:var(--accent-yellow);">Wii U and 3DS</span>!
     </p>
   </section>
 
@@ -82,6 +83,15 @@
       The people making this port do not support piracy in any way. In order to patch Project Echo onto your Wii U, you'll need a real copy of Undertale and the data.win file. OneShot does not apply to this because that port is using the 2014 freeware version.
     </div>
   </section>
+
+  <section id="patcher" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
+    <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">Patcher</h2>
+    <p style="font-size:13px; color:var(--accent-gray); line-height:2; letter-spacing:1.2px;">
+      The patcher is still in early development. For now, only Deltarune Chapter 1 patching is supported, and the patcher can only create .cia files for the 3DS. Wii U support and Undertale patching will come in later updates!
+      <div id="patcher" class="patcher-box">
+        <a href="patcher.html" target="_blank" class="patcher-cta">Go to the Patcher!</a>
+      </div>
+    </p>
 
   <section id="how-its-made" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
     <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">How it's Made</h2>
