Modified info about the projects, and updated stuff

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     
     <div id="playtest" class="playtest-box">
-      <a href="https://discord.gg/bVSvffJEQD" target="_blank" class="playtest-cta">Join Discord! (People who join before February 20th gets FREE playtester!)</a>
+      <a href="https://discord.gg/bVSvffJEQD" target="_blank" class="playtest-cta">Join Discord!<br>
+        (Please see the Important Notice below for more details!)</a>
     </div>
   </section>
 
@@ -43,9 +44,7 @@
   <section class="raid-notice">
     <div class="raid-notice-title">⚠ Important Notice</div>
     <div class="raid-notice-text">
-      Our Discord server was recently raided and nuked, and i'm working hard to recover our old members back. 
-      <span>Playtesters will receive their UNDERTALE ports once we've recovered our member count.</span> 
-      Thank you for your patience and understanding.
+      <span>We've had so many people join, so we've decided to choose the playtesters early and closed the server. Thanks for your love and support!</span> 
     </div>
   </section>
 
@@ -55,23 +54,23 @@
       
       <div class="game-card">
         <img src="assets/undertale.png" alt="Undertale">
-        <div class="card-status">In Development</div>
+        <div class="card-status">Planned</div>
         <div class="card-title">Undertale</div>
-        <div class="card-engine">Ported using Nintendo Web Framework</div>
+        <div class="card-engine">Ported using Nintendo Web Framework. (Wii U)</div>
       </div>
 
       <div class="game-card">
         <img src="assets/deltarune.jpg" alt="Deltarune">
         <div class="card-status">In Development</div>
         <div class="card-title">Deltarune</div>
-        <div class="card-engine">Ported using Nintendo Web Framework</div>
+        <div class="card-engine">Ported using Nintendo Web Framework (Wii U), and remade from scratch using Unity. (3DS)</div>
       </div>
 
       <div class="game-card">
         <img src="assets/oneshot.webp" alt="Oneshot">
         <div class="card-status">Planned</div>
         <div class="card-title">Oneshot</div>
-        <div class="card-engine">Will be ported using EasyRPG</div>
+        <div class="card-engine">Will be ported using EasyRPG.</div>
       </div>
 
     </div>
@@ -80,14 +79,14 @@
   <section class="disclaimer-section">
     <div class="disclaimer-title">Legal Disclaimer</div>
     <div class="disclaimer-text">
-      The people making this port do not support piracy in any way. In order to patch Project Echo onto your Wii U, you'll need a real copy of Undertale and the data.win file. OneShot does not apply to this because that port is using the 2014 freeware version.
+      The Project Echo team does not support piracy in any way. In order to patch Project Echo onto your Wii U or 3DS, you'll need a real copy of Deltarune, Undertale, and the corresponding data.win file. OneShot does not apply to this because that port is using the 2014 freeware version.
     </div>
   </section>
 
   <section id="patcher" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
     <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">Patcher</h2>
     <p style="font-size:13px; color:var(--accent-gray); line-height:2; letter-spacing:1.2px;">
-      The patcher is still in early development. For now, only Deltarune Chapter 1 patching is supported, and the patcher can only create .cia files for the 3DS. Wii U support and Undertale patching will come in later updates!
+      The patcher is still in early development. For now, only Deltarune Chapter 1 patching is supported, and the patcher can only create .cia files for the 3DS. Wii U support and Undertale patching will come in later updates! Please note: you need a real data.win file in order to patch the game.
       <div id="patcher" class="patcher-box">
         <a href="patcher.html" target="_blank" class="patcher-cta">Go to the Patcher!</a>
       </div>
@@ -96,7 +95,7 @@
   <section id="how-its-made" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
     <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">How it's Made</h2>
     <p style="font-size:13px; color:var(--accent-gray); line-height:2; letter-spacing:1.2px;">
-      I use a tool called Nintendo Web Framework to bring Undertale and Deltarune to the Wii U. Because gamemaker lacks a native Wii U port, we instead export undertale to HTML, and then use Nintendo Web Framework to pack it into a Wii U File. OneShot will be based off of the EasyRPG Wii port by cmaster25. You can find their source code here: <a href="https://github.com/cmaster25/Oneshot-For-Wii" target="_blank">https://github.com/cmaster25/Oneshot-For-Wii</a>
+      I use a tool called Nintendo Web Framework to bring Undertale and Deltarune to the Wii U. Because GameMaker lacks a native Wii U port, we instead export Undertale to HTML, and then use Nintendo Web Framework to pack it into a Wii U File. OneShot will be based off of the EasyRPG Wii port by cmaster25. You can find their source code here: <a href="https://github.com/cmaster25/Oneshot-For-Wii" target="_blank">https://github.com/cmaster25/Oneshot-For-Wii</a>
     </p>
   </section>
 
@@ -128,7 +127,7 @@
       <a href="https://discord.gg/bVSvffJEQD" target="_blank">Discord</a>
     </p>
     <br>
-    <p>Not affiliated with Toby Fox or Future Cat LLC. Ports by Ventura J.S.C. I DO NOT HAVE ANY ALTERNATE ACCOUNTS OR SOCIAL MEDIA ASIDE FROM YOUTUBE</p>
+    <p>Not affiliated with Toby Fox or Future Cat LLC. Ports by Ventura J.S.C. I DO NOT HAVE ANY ALTERNATE ACCOUNTS OR SOCIAL MEDIA ASIDE FROM YOUTUBE.</p>
   </footer>
 </body>
 </html>
