--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section id="patcher" style="text-align:center; padding:70px 20px; max-width:720px; margin:0 auto;">
     <h2 style="font-size: clamp(20px, 3.5vw, 28px); letter-spacing:3px; margin-bottom:24px;">Patcher</h2>
     <p style="font-size:13px; color:var(--accent-gray); line-height:2; letter-spacing:1.2px;">
-      The patcher is still in early development. For now, only Deltarune Chapter 1 patching is supported, and the patcher can only create .cia files for the 3DS. Wii U support and Undertale patching will come in later updates! Please note: you need a real data.win file in order to patch the game.
+      The patcher is still in early development. For now, only Deltarune Chapter 1 patching is supported, and the patcher can only create .cia files for the 3DS. Wii U support and Undertale patching will come in later updates!
       <div id="patcher" class="patcher-box">
         <a href="patcher.html" target="_blank" class="patcher-cta">Go to the Patcher!</a>
       </div>
