--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
   <section class="hero">
     <div style="display:flex; align-items:center; justify-content:center; gap:24px; flex-wrap:wrap;">
-      <img src="assets/echo.png" alt="Project Echo Icon" style="width:clamp(60px, 10vw, 100px); height:auto; image-rendering:pixelated;">
-      <h1 class="hero-title">Project Echo</h1>
+      <img src="assets/logo.gif" alt="Project Echo Icon" style="width:clamp(400px, 10vw, 150px); height:auto; image-rendering:pixelated;">
     </div>
     
     <div id="playtest" class="playtest-box">
