Updated website to Iza's liking and added credit :)

--- a/index.html
+++ b/index.html
@@ -27,24 +27,16 @@
     </div>
     
     <div id="playtest" class="playtest-box">
-      <a href="#notice" onclick="event.preventDefault(); document.getElementById('notice').scrollIntoView({behavior: 'smooth', block: 'center'});" class="playtest-cta" style="background-color: #555; cursor: default; color: #ccc;">Join Discord!<br>
-        (Please see the Important Notice below for more details!)</a>
+      <a href="#notice" onclick="event.preventDefault(); document.getElementById('notice').scrollIntoView({behavior: 'smooth', block: 'center'});" class="playtest-cta" style="background-color: #555; cursor: default; color: #ccc;">Join Discord!</a>
     </div>
   </section>
 
   <section style="text-align:center; padding: 20px 20px 50px; max-width:40vw; margin:0 auto;">
     <p style="font-size:13px; color: var(--accent-gray); line-height:2; letter-spacing:1.2px;">
-      <span style="color:var(--accent-yellow);">Project Echo</span> is a fanmade port of
+      <span style="color:var(--accent-yellow);">Project Echo</span> is a collection of fanmade ports and remakes of
       <span style="color:var(--accent-yellow);">Undertale</span>, <span style="color:var(--accent-yellow);">Deltarune</span>, and <span style="color:var(--accent-yellow);">OneShot</span>
       to the <span style="color:var(--accent-yellow);">Wii U and 3DS</span>!
     </p>
-  </section>
-
-  <section class="raid-notice" id="notice">
-    <div class="raid-notice-title">⚠ Important Notice</div>
-    <div class="raid-notice-text">
-      <span>We've had so many people join, so we've decided to choose the playtesters early and closed the server. Thanks for your love and support!</span> 
-    </div>
   </section>
 
   <section class="games-section" id="games">
@@ -126,7 +118,8 @@
       <a href="https://discord.gg/bVSvffJEQD" target="_blank">Discord</a>
     </p>
     <br>
-    <p>Not affiliated with Toby Fox or Future Cat LLC. Ports by Ventura J.S.C. I DO NOT HAVE ANY ALTERNATE ACCOUNTS OR SOCIAL MEDIA ASIDE FROM YOUTUBE.</p>
+    <p>Not affiliated with Toby Fox or Future Cat LLC. Ports by Ventura J.S.C. I DO NOT HAVE ANY ALTERNATE ACCOUNTS OR SOCIAL MEDIA ASIDE FROM YOUTUBE.<br>
+    <br>Website remade by <a href="https://github.com/dorian-osly" target="_blank">dorian-osly</a>!</p>
   </footer>
 </body>
 </html>
