--- a/patcher.html
+++ b/patcher.html
@@ -24,7 +24,7 @@
        src="assets/projectechopatcher.png"
        alt="Project Echo Patcher">
 
-  <div class="version-row">v1.00</div>
+  <div class="version-row">v1.01</div>
 
   <div class="body">
 
@@ -387,3 +387,4 @@ function onError(msg) {
 </script>
 </body>
 </html>
+<!-- patcher remade and updated by dorian-osly -->
